<resources>
    <string name="app_name">半暖</string>
    <string name="home_text">主页</string>
    <string name="sort_text">分类</string>
    <string name="explore_text">探索</string>
    <string name="topics_text">专题</string>
    <string name="mine_text">我的</string>
    <string name="press_key_back_info">再按一次退出应用</string>
    <string name="search_view_text">请输入搜索内容</string>
    <string name="ic_search_desc">搜索图标</string>
    <string name="cancel">取消</string>
    <string name="text_sign_in">登 录</string>
    <string name="hint_account">用户名/手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="text_sign_up">注 册</string>
    <string name="text_logo_desc">社区化导购商城</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_third_login">第三方登录</string>
    <string name="text_86">+86</string>
    <string name="text_phone">请输入手机号</string>
    <string name="text_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_next">下一步</string>
    <string name="text_hint_username">用户名</string>
    <string name="hint_confirm_password">请确认密码</string>
    <string name="hint_search">请输入搜索内容</string>
    <string name="text_goto_sign_up"><![CDATA[没有账号？去注册>>]]></string>
    <string name="text_goto_sign_in"><![CDATA[已有账号？去登录>>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_reacquire_code">重新获取验证码</string>
    <string name="service_desc_3">48小时快速退款</string>
    <string name="service_desc_2">30天无忧退货</string>
    <string name="service_desc_1">半暖自营品牌</string>
    <string name="text_view_all">查看全部</string>
    <string name="text_ads">广告</string>
    <string name="str_my_collection">我的收藏</string>
    <string name="str_address">收货地址</string>
    <string name="str_my_info">个人中心</string>
    <string name="str_comment">待评价</string>
    <string name="str_deliveried">已发货</string>
    <string name="str_waiting_delivery">待发货</string>
    <string name="str_waiting_pay">待付款</string>
    <string name="str_my_cart">购物车</string>
    <string name="str_my_order">我的订单</string>
    <string name="str_user_base_info">个人信息</string>
    <string name="str_account_safe">账号安全</string>
    <string name="str_save">保存</string>
    <string name="star_click_update">点击修改头像</string>
    <string name="str_select_date">点击选择日期</string>
    <string name="str_user_birth">生日</string>
    <string name="str_user_email">邮箱</string>
    <string name="str_user_sex">性别</string>
    <string name="str_user_name">昵称</string>
    <string name="str_user_account">账号</string>
    <string name="str_user_id">用户ID</string>
    <string name="str_male">男</string>
    <string name="str_female">女</string>
    <string name="str_add_to_cart">加入购物车</string>
    <string name="str_buy_now">立即购买</string>
    <string name="str_show_goods_detail">下拉查看商品详情</string>
    <string name="str_select_spec">规格数量选择</string>
    <string name="str_selected">已选择:</string>
    <string name="str_default_count">1</string>
    <string name="str_cart">购物车</string>
    <string name="str_edit">编辑</string>
</resources>
