<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.semiwarm.cn.fragment.MineFragment">

    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#21294C"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ci_user_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/tv_user_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_level"
            android:gravity="center"
            android:text="普通用户"
            android:textColor="@color/grey_400"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="风吹裙起屁屁凉"
            android:textColor="@color/grey_50"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_my_order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        android:text="@string/str_my_order"
        android:textColor="@color/grey_800"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_300"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/ic_shopping_bag"
            android:gravity="center"
            android:text="@string/str_my_cart"/>

        <TextView
            android:id="@+id/tv_waiting_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/ic_credit_card"
            android:gravity="center"
            android:text="@string/str_waiting_pay"/>

        <TextView
            android:id="@+id/tv_waiting_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/ic_archive"
            android:gravity="center"
            android:text="@string/str_waiting_delivery"/>

        <TextView
            android:id="@+id/tv_deliveried"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/ic_truck"
            android:gravity="center"
            android:text="@string/str_deliveried"/>

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/ic_commenting"
            android:gravity="center"
            android:text="@string/str_comment"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_my_center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        android:text="@string/str_my_info"
        android:textColor="@color/grey_800"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_300"/>

    <TextView
        android:id="@+id/tv_my_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        android:text="@string/str_address"
        android:textColor="@color/grey_800"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_300"/>

    <TextView
        android:id="@+id/tv_my_collection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        android:text="@string/str_my_collection"
        android:textColor="@color/grey_800"
        android:textSize="16sp"/>

</LinearLayout>
