<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="app.semiwarm.cn.activity.SignInActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--logo-->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo"/>

    <!--描述-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_logo_desc"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <!--输入框-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input_field"
        android:orientation="vertical">

        <!--账户输入框-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_account"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="222dp"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/hint_account"
                android:inputType="text"
                android:textColorHint="@color/grey_400"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_account_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_delete"
                android:visibility="invisible"/>

        </LinearLayout>

        <!--分割线-->
        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/grey_400"/>

        <!--密码输入框-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="222dp"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@color/grey_400"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_password_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_eye"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <!--其它功能-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forget_password"
            android:textColor="@color/blue_500"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/text_goto_sign_up"
            android:textColor="@color/blue_500"
            android:textSize="15sp"/>

    </LinearLayout>

    <!--登录按钮-->
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_sign_in_button"
        android:text="@string/text_sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <!--第三方登录-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_third_login"
        android:textColor="@color/grey_300"/>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey_300"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_third_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_third_qq"/>

        <ImageView
            android:id="@+id/iv_third_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:src="@drawable/ic_third_wechat"/>

        <ImageView
            android:id="@+id/iv_third_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:src="@drawable/ic_third_weibo"/>

    </LinearLayout>
</LinearLayout>
